--- a/slider/index.html
+++ b/slider/index.html
@@ -3,16 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>slider</title>
+    <title>텍스트 슬라이더</title>
     <link rel="stylesheet" href="style.css">
-    <script src="slider.js" defer></script>
 </head>
 <body>
+    <!-- 
+        텍스트 슬라이더 사용법:
+        1. div.container 안에 div.prefix와 ul.slider를 배치합니다.
+        2. div.prefix에는 고정 텍스트를 넣습니다.
+        3. ul.slider는 비워두세요 (JavaScript에서 자동으로 채워집니다).
+        4. slider.js 파일에서 SLIDER_CONFIG 객체를 수정하여 설정을 변경할 수 있습니다.
+    -->
     <div class="container">
-        <div class="">my name is</div>
-        <ul class="slider">
-        </ul>
-        
+        <div class="prefix">당신에게 </div>
+        <div class="slider-container">
+            <ul class="slider"></ul>
+        </div>
+        <div class="prefix">선사합니다 </div>
     </div>
+    
+    <!-- 스크립트는 body 끝에 배치하세요 -->
+    <script src="slider.js"></script>
 </body>
+</html>
