feat: 나무 자라기 효과 완성

--- a/ink-name-card/index.html
+++ b/ink-name-card/index.html
@@ -9,6 +9,6 @@
 <body>
   <canvas id="ink-canvas"></canvas>
   <div id="message" class="hidden">안녕하세요</div>
-  <script src="script.js"></script>
+  <script src="script1.js"></script>
 </body>
 </html>
