feat: ink 클릭 지점에서 생기는 로직 추가가

--- a/ink-name-card/index.html
+++ b/ink-name-card/index.html
@@ -8,7 +8,35 @@
 </head>
 <body>
   <canvas id="ink-canvas"></canvas>
-  <div id="message" class="hidden">안녕하세요</div>
-  <script src="script1.js"></script>
+  
+  <div class="content-container">
+    <div class="text-container">
+      <span class="char-wrapper">안</span>
+      <span class="char-wrapper">녕</span>
+      <span class="char-wrapper">하</span>
+      <span class="char-wrapper">세</span>
+      <span class="char-wrapper">요</span>
+    </div>
+    
+    <div class="text-container">
+      <span class="char-wrapper">환</span>
+      <span class="char-wrapper">영</span>
+      <span class="char-wrapper">합</span>
+      <span class="char-wrapper">니</span>
+      <span class="char-wrapper">다</span>
+    </div>
+    
+    <div class="text-container">
+      <span class="char-wrapper">먹</span>
+      <span class="char-wrapper">물</span>
+      <span class="char-wrapper">효</span>
+      <span class="char-wrapper">과</span>
+      <span class="char-wrapper">입</span>
+      <span class="char-wrapper">니</span>
+      <span class="char-wrapper">다</span>
+    </div>
+  </div>
+  
+  <script src="script5.js"></script>
 </body>
 </html>
