도시, 이중노출, 매트릭스, 스캐털드, 지퍼 명함 추가가

--- a/matrix-name-card/index.html
+++ b/matrix-name-card/index.html
@@ -5,44 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>매트릭스 스타일 명함</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500&display=swap">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <canvas id="matrixCanvas"></canvas>
     <div class="card-container">
         <div class="business-card" id="businessCard">
-            <div class="card-header">
-                <div class="name" id="name">Name: Seungwoo Park</div>
-                <div class="role" id="role">AI Collaboration: 초고속 창작자</div>
-              </div>
-              <div class="card-details" id="details">
-                <div class="detail-item">
-                  <div class="detail-label">생성 컨텐츠:</div>
-                  <div class="detail-value">월 1,200개 | 평균 소비 시간: 17초</div>
+            <div class="company-header">
+                <div class="company-name" id="companyName">INSTANTIDEA INC.</div>
+            </div>
+            
+            <div class="card-content">
+                <div class="left-section">
+                    <div class="name" id="name">SEUNGWOO PARK</div>
+                    <div class="role" id="role">AI COLLABORATOR</div>
                 </div>
-                <div class="detail-item">
-                  <div class="detail-label">아이디어 정제율:</div>
-                  <div class="detail-value">72% (나머지 28%: 폐기)</div>
+                
+                <div class="right-section">
+                    <div class="contact-info" id="contactInfo">
+                        <div class="contact-item">월 1,200개 생성 (평균 17초)</div>
+                        <div class="contact-item">아이디어 정제율 72%</div>
+                        <div class="contact-item">AI 의존도 85%</div>
+                        <div class="contact-item">탄소배출량 1.7kg/월</div>
+                    </div>
                 </div>
-                <div class="detail-item">
-                  <div class="detail-label">외부 영감 의존도:</div>
-                  <div class="detail-value">85% (AI, 데이터 세트 기반)</div>
-                </div>
-                <div class="detail-item">
-                  <div class="detail-label">에너지 사용량:</div>
-                  <div class="detail-value">월 3.2kWh (탄소 배출: 1.7kg)</div>
-                </div>
-                <div class="detail-item">
-                  <div class="detail-label">자체 사유 시간:</div>
-                  <div class="detail-value">주간 평균: 1.3시간</div>
-                </div>
-                <div class="detail-item">
-                  <div class="detail-label">지속 가능성 경고:</div>
-                  <div class="detail-value">생성 속도 > 소화 속도 (주의 필요)</div>
-                </div>
-              </div>
-            <div class="card-footer" id="footer">
-                "AI가 우리를 대신해 생각하는 동안, 우리는 무엇을 생각해야 할까?"
             </div>
         </div>
     </div>
