feat: 모바일 반응형 UI 업데이트 (leftPanel, rightPanel)

--- a/labeled-photo-card/index.html
+++ b/labeled-photo-card/index.html
@@ -58,7 +58,7 @@
 		<div class="count-down-container">
 			<div class="count-down-content">
 				<div class="count-down-text">
-					<span class="matrix-text">00:00:00</span>
+					<span class="matrix-text">00h 00m 00s</span>
 				</div>
 			</div>
 		</div>
